# haruhishot

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  meson.build  meson_options.txt  settings.lua
.github/workflows/: rust.yml  typos.yml
archlinux/: PKGBUILD
libharuhishot/: Cargo.toml  README.md
libharuhishot/src/: convert.rs  harihierror.rs  haruhierror.rs  lib.rs  overlay.rs  screenshot.rs  state.rs  utils.rs  wlrcopystate.rs  wlrshotbasestate.rs
misc/: haruhishot.desktop
scdoc/: haruishot.1.scd
src/: backend.rs  clapargs.rs  constenv.rs  filewriter.rs  haruhierror.rs  main.rs  outputs.rs  screenshot.rs  slintbackend.rs  state.rs  swayloop.rs  utils.rs  wlrbackend.rs  wlrcaptruestate.rs
ui/: appwindow.slint  imageshow.slint  selectpopup.slint  selectwindow.slint
