[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "impl screencopy for wayland"
authors = ["Decodertalkers <aakari@tutanota.com>"]
homepage = "https://github.com/Decodetalkers/haruhishot"
documentation = "https://docs.rs/libharuhishot/"
keywords = ["wayland"]

[package]
name = "haruhishot"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "haruhishot"
authors.workspace = true
homepage.workspace = true
keywords.workspace = true

[workspace]
members = [".", "libharuhishot"]

[workspace.dependencies]
image = { version = "0.25", default-features = false, features = [
	"jpeg",
	"png",
	"pnm",
] }
wayland-client = "0.31"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
wayland-protocols = { version = "0.32.6", default-features = false, features = [
	"unstable",
	"client",
	"staging",
] }

[dependencies]

wayland-protocols.workspace = true
libharuhishot = { path = "libharuhishot", version = "0.4.0" }

image.workspace = true

tracing-subscriber.workspace = true
tracing.workspace = true
clap = "4.5.30"
once_cell = "1.21.0"

dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }

wayland-client.workspace = true
notify-rust = { version = "4.11.5", optional = true, features = ["images"] }
