[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "impl screencopy for wayland"
authors = ["Decodertalkers <aakari@tutanota.com>"]
homepage = "https://github.com/Decodetalkers/haruhishot"
repository = "https://github.com/Decodetalkers/haruhishot"
documentation = "https://docs.rs/libharuhishot/"
keywords = ["wayland"]

[package]
name = "haruhishot"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "haruhishot"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[workspace]
members = [".", "libharuhishot"]

[workspace.dependencies]
image = { version = "0.25", default-features = false, features = [
	"jpeg",
	"png",
	"pnm",
] }
wayland-client = "0.31"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
wayland-protocols = { version = "0.32.9", default-features = false, features = [
	"unstable",
	"client",
	"staging",
] }
thiserror = "2.0.17"

nix = { version = "0.31.1", features = ["fs", "mman"] }
memmap2 = "0.9.8"

[dependencies]
libharuhishot = { path = "libharuhishot", version = "0.5.0" }

image.workspace = true
memmap2.workspace = true

tracing-subscriber.workspace = true
tracing.workspace = true
clap = { version = "4.5.49", features = ["derive", "color"] }

dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }

wayland-client.workspace = true
thiserror.workspace = true
notify-rust = { version = "4.11.7", features = ["images"] }
libwaysip = "0.6.0"
