[package]
name = "libharuhishot"
version = "0.2.5"
edition = "2021"
license = "MIT"
description = "impl screencopy for wayland"
authors = ["Decodertalkers <aakari@tutanota.com>"]
homepage = "https://github.com/Decodetalkers/haruhishot"
documentation = "https://docs.rs/libharuhishot/"
keywords = ["wayland"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-protocols = { version = "0.32.4", default-features = false, features = [
	"unstable",
	"client",
] }
#wayland-protocols = { version = "=0.30.0-beta.13", features = ["client", "unstable"] }


wayland-protocols-wlr = { version = "0.3.4", default-features = false, features = [
	"client",
] }
wayland-client = "0.31"
#wayland-client = "=0.30.0-beta.13"

nix = { version = "0.29.0", features = ["fs", "mman"] }

memmap2 = "0.9.5"

# in the feature
tracing = "0.1.40"

thiserror = "1.0.64"
