[package]
name = "libharuhishot"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "impl screencopy for wayland"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/libharuhishot/"
keywords = ["wayland"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-protocols = { version = "0.32.9", default-features = false, features = [
	"unstable",
	"client",
	"staging"
] }
#wayland-protocols = { version = "=0.30.0-beta.13", features = ["client", "unstable"] }


wayland-protocols-wlr = { version = "0.3.9", default-features = false, features = [
	"client",
] }
wayland-client.workspace = true
#wayland-client = "=0.30.0-beta.13"

nix = { version = "0.31.1", features = ["fs", "mman"] }

memmap2 = "0.9.8"

# in the feature
tracing = "0.1.41"

thiserror = "2.0.17"

image.workspace = true
